--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<a class="payment__icon_info" href="#"></a>
 				</div>
 			</div>
-			<h5 class="h5">Владелец карты</h5>
+			<h5 class="h5">Держатель карты</h5>
 			<div class="input__field">
 				<input class="input input__up input_latin" type="text" name="cardholder" required></input>
                 <label class="error error__cardholder" for="cardholder"></label>
